--- a/public/gage_data.html
+++ b/public/gage_data.html
@@ -42,9 +42,9 @@
 									<div class="content">
 										<!-- Box Content Here -->
                                         <!-- <span>Last Modified:<?php //echo " " . $current_date_time //. " " . date_default_timezone_get(); ?></span><br> -->
-										<span><h3><a href='gage_data.php?basin=Mississippi'>Switch to PHP</a></h3></span> 
-                                        <span><h3><a href='gage_data.html?basin=Mississippi&cda=internal'>Switch to Cloud Internal</a></h3></span>
-                                        <span><h3><a href='gage_data.html?basin=Mississippi&cda=public'>Switch to Cloud Public</a></h3></span>
+										<span><h3><a href='https://wm.mvs.ds.usace.army.mil/district_templates/gage_data/public/gage_data.php?basin=Mississippi' target="_blank">Switch to PHP</a></h3></span> 
+                                        <span><h3><a href='https://wm.mvs.ds.usace.army.mil/district_templates/gage_data/public/gage_data.html?basin=Mississippi&cda=internal' target="_blank">Switch to Cloud Internal</a></h3></span>
+                                        <span><h3><a href='https://wm.mvs.ds.usace.army.mil/district_templates/gage_data/public/gage_data.html?basin=Mississippi&cda=public' target="_blank">Switch to Cloud Public</a></h3></span>
                                         <span><h3><a href='https://www.mvs-wc.usace.army.mil/district_templates/gage_data/public/gage_data.html?basin=Mississippi&cda=public' target="_blank">View via Public</a></h3></span>
                                         <!-- <span><h3><a href='http://localhost:5173/mvs/reports/gage-data' target="_blank">View via Local Groundwork</a></h3></span> -->
                                         <!-- <span><h3><a href='gage-data-test.php?basin=Mississippi'>Switch to Test</a></h3></span> -->
