--- a/public/gage_data.html
+++ b/public/gage_data.html
@@ -41,18 +41,11 @@
 								<div class="box-content" style="background-color:white;margin:auto">
 									<div class="content">
 										<!-- Box Content Here -->
-                                        <!-- <span>Last Modified:<?php //echo " " . $current_date_time //. " " . date_default_timezone_get(); ?></span><br> -->
 										<span><h3><a href='https://wm.mvs.ds.usace.army.mil/district_templates/gage_data/public/gage_data.php?basin=Mississippi' target="_blank">Switch to PHP</a></h3></span> 
                                         <span><h3><a href='https://wm.mvs.ds.usace.army.mil/district_templates/gage_data/public/gage_data.html?basin=Mississippi&cda=internal' target="_blank">Switch to Cloud Internal</a></h3></span>
                                         <span><h3><a href='https://wm.mvs.ds.usace.army.mil/district_templates/gage_data/public/gage_data.html?basin=Mississippi&cda=public' target="_blank">Switch to Cloud Public</a></h3></span>
                                         <span><h3><a href='https://www.mvs-wc.usace.army.mil/district_templates/gage_data/public/gage_data.html?basin=Mississippi&cda=public' target="_blank">View via Public</a></h3></span>
-                                        <!-- <span><h3><a href='http://localhost:5173/mvs/reports/gage-data' target="_blank">View via Local Groundwork</a></h3></span> -->
-                                        <!-- <span><h3><a href='gage-data-test.php?basin=Mississippi'>Switch to Test</a></h3></span> -->
 									</div>
-                                    <!-- <div class="alert">
-                                        <strong>May 01, 2024 - Version V1.0</strong> - This report was build using cloud database and JavaScript, no coldfusion schema and local database were used <br>
-                                        <strong>May 24, 2024 - Version V1.1</strong> - gage_control3.json was used <br> 
-                                    </div> -->
 								</div>
 							</div>
 						</div>
@@ -215,7 +208,8 @@ document.addEventListener("DOMContentLoaded", function() {
 
     // Set the title and the span content based on the 'type' parameter
     const type = urlParams.get('type');
-    title = "Gage Data" + " - " + urlParams.get('basin') + " - " + urlParams.get('cda');
+    // title = "Gage Data" + " - " + urlParams.get('basin') + " - " + urlParams.get('cda');
+    title = "Gage Data" + " - " + urlParams.get('basin');
     
     
 
@@ -223,7 +217,7 @@ document.addEventListener("DOMContentLoaded", function() {
         document.title = title;
         const titleSpan = document.querySelector('.titleLabel.title');
         if (titleSpan) {
-            titleSpan.textContent = title + " CDA V1.1";
+            titleSpan.textContent = title + "";
         }
     }
 
