got gage data to work with office id

--- a/index.html
+++ b/index.html
@@ -51,48 +51,40 @@
 
                 <!-- Setup url parameters -->
                 <script>
+                    // Create a URL object with the current page URL
+                    const urlParams = new URLSearchParams(window.location.search);
+
+                    const param5Value = urlParams.get('office');
+                    var office = urlParams.get('office');
+                    console.log('office: ', office);
+
                     // Calculate the document root
                     const documentRoot = window.location.protocol + "//" + window.location.host + "/";
 
                     // Determine the default value of cda based on documentRoot
-                    const cdaDefault = (documentRoot === "https://wm.mvs.ds.usace.army.mil/") ? "internal" : "public";
+                    const cdaDefault = (documentRoot === `https://wm.${office.toLocaleLowerCase()}.ds.usace.army.mil/`) ? "internal" : "public";
                     console.log("cdaDefault: ", cdaDefault);
 
                     // Determine the default value of cda based on documentRoot
-                    const typeDefault = (documentRoot === "https://wm.mvs.ds.usace.army.mil/") ? "internal" : "public";
+                    const typeDefault = (documentRoot === `https://wm.${office.toLocaleLowerCase()}.ds.usace.army.mil/`) ? "internal" : "public";
                     console.log("typeDefault: ", typeDefault);
-
-                    // Create a URL object with the current page URL
-                    const urlParams = new URLSearchParams(window.location.search);
-
+                    
                     // Get the value of a specific parameter
-                    const param1Value = urlParams.get('basin') || 'Mississippi';
-                    const param2Value = urlParams.get('cda') || cdaDefault;
-                    const param3Value = urlParams.get('gage');
-                    const param4Value = urlParams.get('type') || typeDefault;
-                    const param5Value = urlParams.get('office') || 'MVS';
-
-                    urlParams.forEach(function (value, key) {
-                        console.log(key, value);
-                    });
-                </script>
-
-                <!-- Get url parameters -->
-                <script>
-                    var basin = urlParams.get('basin') || 'Mississippi';
-                    console.log('basin: ', basin);
-
+                    const param2Value = urlParams.get('cda');
                     var cda = urlParams.get('cda') || cdaDefault;
                     console.log('cda: ', cda);
 
-                    var gage = urlParams.get('gage');
-                    console.log('gage: ', gage);
-
+                    const param4Value = urlParams.get('type');
                     var type = urlParams.get('type') || typeDefault;
                     console.log('type: ', type);
 
-                    var office = urlParams.get('office') || 'MVS';
-                    console.log('office: ', office);
+                    const param1Value = urlParams.get('basin');
+                    var basin = urlParams.get('basin') || 'Mississippi';
+                    console.log('basin: ', basin);
+
+                    const param3Value = urlParams.get('gage');
+                    var gage = urlParams.get('gage');
+                    console.log('gage: ', gage);
                 </script>
 
                 <div id="container"></div>
@@ -119,53 +111,93 @@
                             tr.appendChild(th);
                         }
 
-                        // Create th elements with links
-                        var basins = ['Mississippi', 'Ohio', 'Salt', 'Cuivre', 'Illinois', 'Missouri', 'Meramec', 'Kaskaskia', 'Big Muddy', 'Castor', 'St Francis'];
-                        if (cda === "public") {
-                            for (var i = 0; i < basins.length; i++) {
-                                var th = document.createElement('th');
-                                var link = document.createElement('a');
-                                link.href = 'index.html?office=' + office + '&basin=' + basins[i] + "&cda=public";
-                                link.innerHTML = '<strong>' + basins[i] + '</strong>';
-                                var p = document.createElement('p');
-                                p.appendChild(link);
-                                th.appendChild(p);
-                                tr.appendChild(th);
-                            }
-                        } else if (cda === "internal") {
-                            for (var i = 0; i < basins.length; i++) {
-                                var th = document.createElement('th');
-                                var link = document.createElement('a');
-                                link.href = 'index.html?office=' + office + '&basin=' + basins[i] + "&cda=internal";
-                                link.innerHTML = '<strong>' + basins[i] + '</strong>';
-                                var p = document.createElement('p');
-                                p.appendChild(link);
-                                th.appendChild(p);
-                                tr.appendChild(th);
-                            }
-                        } else {
-                            for (var i = 0; i < basins.length; i++) {
-                                var th = document.createElement('th');
-                                var link = document.createElement('a');
-                                link.href = 'gage_data_cda.php?basin=' + basins[i];
-                                link.innerHTML = '<strong>' + basins[i] + '</strong>';
-                                var p = document.createElement('p');
-                                p.appendChild(link);
-                                th.appendChild(p);
-                                tr.appendChild(th);
-                            }
-                        }
+                        let basins = null;
+                        const apiUrl = `https://coe-${office.toLocaleLowerCase()}uwa04${office.toLocaleLowerCase()}.${office.toLocaleLowerCase()}.usace.army.mil:8243/${office.toLocaleLowerCase()}-data/location/group?office=${office}&include-assigned=false&location-category-like=Basins`;
+                        fetch(apiUrl)
+                            .then(response => {
+                                if (!response.ok) {
+                                    throw new Error('Network response was not ok');
+                                }
+                                return response.json();
+                            })
+                            .then(data => {
+                                if (!Array.isArray(data) || data.length === 0) {
+                                    console.warn('No data available from the initial fetch.');
+                                    return;
+                                }
+
+                                console.log('Data fetched:', data);
+
+                                const targetCategory = { "office-id": office, "id": "Basins" };
+
+                                function filterByLocationCategory(array, category) {
+                                    return array.filter(item =>
+                                        item['location-category'] &&
+                                        item['location-category']['office-id'] === category['office-id'] &&
+                                        item['location-category']['id'] === category['id']
+                                    );
+                                }
+
+                                const filteredArray = filterByLocationCategory(data, targetCategory);
+                                console.log(filteredArray);
+
+                                // Extract the "id" values from each object
+                                basins = filteredArray.map(item => item.id);
+                                if (basins.length === 0) {
+                                    console.warn('No basins found for the given category.');
+                                    return;
+                                }
+
+                                console.log(basins);
+
+                                // Create th elements with links
+                                var basinsOrder = ['Mississippi', 'Ohio', 'Salt', 'Cuivre', 'Illinois', 'Missouri', 'Meramec', 'Kaskaskia', 'Big Muddy', 'Castor', 'St Francis'];
+                                if (cda === "public") {
+                                    for (var i = 0; i < basins.length; i++) {
+                                        var th = document.createElement('th');
+                                        var link = document.createElement('a');
+                                        link.href = 'index.html?office=' + office + '&basin=' + basins[i] + "&cda=public";
+                                        link.innerHTML = '<strong>' + basins[i] + '</strong>';
+                                        var p = document.createElement('p');
+                                        p.appendChild(link);
+                                        th.appendChild(p);
+                                        tr.appendChild(th);
+                                    }
+                                } else if (cda === "internal") {
+                                    for (var i = 0; i < basins.length; i++) {
+                                        var th = document.createElement('th');
+                                        var link = document.createElement('a');
+                                        link.href = 'index.html?office=' + office + '&basin=' + basins[i] + "&cda=internal";
+                                        link.innerHTML = '<strong>' + basins[i] + '</strong>';
+                                        var p = document.createElement('p');
+                                        p.appendChild(link);
+                                        th.appendChild(p);
+                                        tr.appendChild(th);
+                                    }
+                                } else {
+                                    for (var i = 0; i < basins.length; i++) {
+                                        var th = document.createElement('th');
+                                        var link = document.createElement('a');
+                                        link.href = 'gage_data_cda.php?basin=' + basins[i];
+                                        link.innerHTML = '<strong>' + basins[i] + '</strong>';
+                                        var p = document.createElement('p');
+                                        p.appendChild(link);
+                                        th.appendChild(p);
+                                        tr.appendChild(th);
+                                    }
+                                }
 
 
-                        // Create th elements for remaining spaces
-                        for (var i = 0; i < 2; i++) {
-                            var th = document.createElement('th');
-                            th.innerHTML = '&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;';
-                            tr.appendChild(th);
-                        }
+                                // Create th elements for remaining spaces
+                                for (var i = 0; i < 2; i++) {
+                                    var th = document.createElement('th');
+                                    th.innerHTML = '&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;';
+                                    tr.appendChild(th);
+                                }
 
-                        // Append table to the container div<strong>May 2024 - Version V2.1</strong> - gage_control3.json was used <br> 
-                        document.getElementById('container').appendChild(table);
+                                // Append table to the container div<strong>May 2024 - Version V2.1</strong> - gage_control3.json was used <br> 
+                                document.getElementById('container').appendChild(table);
+                            });
                     }
                 </script>
 
@@ -173,8 +205,10 @@
                 <div id="loading_json" style="display: none;"><img src="../images/loading4.gif"
                         style='height: 50px; width: 50px;' alt="Loading..." /></div>
                 <div id="table_container_gage_data_cda"></div>
+                <script src="functions.js"></script>
+                <script src="gage_data.js"></script>
                 <script src="json.js"></script>
-                <script src="gage_data_cda.js"></script>
+
             </div>
         </div>
         <button id="returnTop" title="Return to Top of Page">Top</button>
