update fetchAndUpdateWaterQuality top account for LPMS data that is 6 hours late. added spinning loading bar, added office to the title.

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 </script>
 
                 <!-- Report Container -->
-                <div id="loading_json" style="display: none;"><img src="../images/loading4.gif"
+                <div id="loading_json" style="display: none;"><img src="images/loading4.gif"
                         style='height: 50px; width: 50px;' alt="Loading..." /></div>
                 <div id="table_container_gage_data_cda"></div>
                 <script src="functions.js"></script>
@@ -252,7 +252,7 @@
         // Set the title and the span content based on the 'type' parameter
         const type = urlParams.get('type');
         // title = "Gage Data" + " - " + urlParams.get('basin') + " - " + urlParams.get('cda');
-        title = "Realtime Gage Data - " + " " + basin;
+        title = office + " - " + "Realtime Gage Data - " + " " + basin;
 
         if (title) {
             document.title = title;
