--- a/public/gage_data.html
+++ b/public/gage_data.html
@@ -272,7 +272,7 @@
         // Set the title and the span content based on the 'type' parameter
         const type = urlParams.get('type');
         // title = "Gage Data" + " - " + urlParams.get('basin') + " - " + urlParams.get('cda');
-        title = "Realtime Gage Data - " + " " + urlParams.get('basin');
+        title = "Realtime Gage Data - " + " " + urlParams.get('basin') + " - " + "[DISCONTINUED]";
 
 
 
