--- a/index.html
+++ b/index.html
@@ -112,7 +112,13 @@
                         }
 
                         let basins = null;
-                        const apiUrl = `https://coe-${office.toLocaleLowerCase()}uwa04${office.toLocaleLowerCase()}.${office.toLocaleLowerCase()}.usace.army.mil:8243/${office.toLocaleLowerCase()}-data/location/group?office=${office}&include-assigned=false&location-category-like=Basins`;
+
+                        let apiUrl = null;
+                        if (cda === "internal") {
+                            apiUrl = `https://coe-${office.toLocaleLowerCase()}uwa04${office.toLocaleLowerCase()}.${office.toLocaleLowerCase()}.usace.army.mil:8243/${office.toLocaleLowerCase()}-data/location/group?office=${office}&include-assigned=false&location-category-like=Basins`;
+                        } else if (cda === "public") {
+                            apiUrl = `https://cwms-data.usace.army.mil/cwms-data/location/group?office=${office}&include-assigned=false&location-category-like=Basins`;
+                        }
                         fetch(apiUrl)
                             .then(response => {
                                 if (!response.ok) {
@@ -188,7 +194,7 @@
                                         tr.appendChild(th);
                                     }
                                 } else {
-                                    
+
                                 }
 
 
