--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         // Set the title and the span content based on the 'type' parameter
         const type = urlParams.get('type');
         // title = "Gage Data" + " - " + urlParams.get('basin') + " - " + urlParams.get('cda');
-        title = office + " - " + "Realtime Gage Data - " + " " + basin;
+        title = office + " - " + "Realtime Gage Data - " + " " + basin + " [DISCONTINUED]";
 
         if (title) {
             document.title = title;
